# chatbot_with_rules_ml

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: chatbot_pipeline.py  config.py  main.py  ml_intent_classifier.py  rules_engine.py
src/data/: rules.yml  training_data.csv
